--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,6 +38,13 @@
   --callout-border-rgb: 172, 175, 176;
   --card-rgb: 180, 185, 188;
   --card-border-rgb: 131, 134, 135;
+
+  /* New variables */
+
+  --background-white: #ffffff;
+  --text-neutral-30: #4f4f4f;
+  --neutral-50: #7c7c7c;
+  --neutral-90: #ececec;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -86,13 +93,8 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: var(--background-white);
+  color: var(--text-neutral-30);
 }
 
 a {
