--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,9 +1,8 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  padding: 6rem;
+  padding: 80px 4% 80px;
   min-height: 100vh;
 }
 
