feat: form image

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -110,3 +110,26 @@ a {
     color-scheme: dark;
   }
 }
+
+/* 滾動軸的樣式 */
+::-webkit-scrollbar {
+  width: 8px; /* 滾動軸的寬度 */
+  height: 8px; /* 滾動軸的高度（水平滾動條） */
+}
+
+/* 滾動槽的樣式 */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* 滾動槽背景色 */
+  border-radius: 4px; /* 圓角 */
+}
+
+/* 滾動滑塊的樣式 */
+::-webkit-scrollbar-thumb {
+  background: #c1c1c1; /* 滾動滑塊的顏色 */
+  border-radius: 4px; /* 圓角 */
+}
+
+/* 滾動滑塊懸停時的樣式 */
+::-webkit-scrollbar-thumb:hover {
+  background: #a1a1a1; /* 滾動滑塊懸停時的顏色 */
+}
