--- a/src/components/loginSetting/page.module.scss
+++ b/src/components/loginSetting/page.module.scss
@@ -40,10 +40,15 @@
         gap:32px;
         
         .previewImage {
-            img{
-                width:50px;
-            }
+            width: 200px;
+            height: auto;
+            position: relative;
             
+            img {
+                width: 100% !important;
+                height: auto !important;
+                position: relative !important;
+            }
         }
 
         .upload {
@@ -59,6 +64,12 @@
             }
             .text {
                 color: #9A9A9A; 
+            }
+            .errorText {
+                color: #d32f2f;
+                font-size: 0.75rem;
+                margin-top: 3px;
+                text-align: center;
             }
             display:flex;
             flex-direction: column;
