--- a/src/components/LoginDialog.module.scss
+++ b/src/components/LoginDialog.module.scss
@@ -1,49 +1,77 @@
 .dialog {
-    width: 440px;
-    gap:20px;
-    border-radius: 20px !important;
-    .contentHead {
-        font-size:24px;
-        color: #007DC3;
-        font-weight: bold;
-        margin-bottom: 24px;
-    }
-    .contentText {
-        font-size:18px;
-        color: #4f4f4f
-    }
+  max-width: 440px;
+  width: 100%;
+  gap: 20px;
+  border-radius: 20px !important;
+  padding: 60px 48px 40px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  margin-left: 28px;
+  margin-right: 28px;
+
+  .contentHead {
+    font-size: 24px;
+    line-height: 28px;
+    color: #007DC3;
+    font-weight: bold;
+    margin-bottom: 20px;
+  }
+
+  .contentText {
+    font-size: 16px;
+    line-height: 19px;
+    color: #4f4f4f
+  }
+
+  @media (max-width: 900px) {
+    padding: 36px 24px 24px;
+  }
 }
 
 .center {
-    display:flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
+  padding: 0;
 }
 
 .dialogContent {
-    display:flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
 }
 
 .buttonContainer {
-    display:flex;
-    justify-content: center;
-    .loginButton {
-        width: 287px;
-        height:52px;
-        margin: 0 24px 24px 24px;
-        border-radius: 20px;
-        font-size: 16px;
-        color:#4f4f4f
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .loginButton {
+    text-transform: none;
+    width: 100%;
+    border-radius: 12px;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: normal;
+    color: #4f4f4f;
+    padding: 14px;
+    border: 1px solid #B5B5B5;
+
+    &:hover {
+      background-color: #ebebeb;
     }
+  }
 }
 
-
 .image {
-    margin-top:36px;
+  width: 104px;
+  height: 97px;
 
+  @media (max-width: 900px) {
+    width: 69px;
+    height: 65px;
+  }
 }
 
 .googleIcon {
-    margin-right: 16px;
+  margin-right: 16px;
 }
