--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -6,6 +6,12 @@
   min-height: 100vh;
 }
 
+@media (max-width: 900px) {
+  .main {
+    padding-bottom: 40px;
+  }
+}
+
 .description {
   display: inherit;
   justify-content: inherit;
